# streaming-platform

./: docker-compose.yaml  main.py  pyproject.toml
notebooks/: consumer.ipynb  producer.ipynb
src/job/: pass_through_job.py
src/producers/: models.py
