[project]
name = "streaming-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=3.0.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
